# cookiecutter-python-project

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-lint-format.yml  test.yml
hooks/: post_gen_project.sh
tests/: test_python_project_template.py
{{cookiecutter.package_name}}/: README.md  Taskfile.yml  initiate-project.sh  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: check-lint-format.yml  check-lint-format.yml.j2  test.yml  test.yml.j2
{{cookiecutter.package_name}}/src/{{cookiecutter.package_slug}}/: __init__.py  __main__.py  settings.py  utils.py
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_slug}}.py.j2
{{cookiecutter.package_slug}}/: .gitignore  .pre-commit-config.yaml  Taskfile.yml  initiate-project.sh  pyproject.toml
{{cookiecutter.package_slug}}/.github/: dependabot.yml
{{cookiecutter.package_slug}}/.github/workflows/: check-lint-format.yml  test.yml
{{cookiecutter.package_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_python_project_template.py
