[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Full Name <full-name@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
mypy = "^0.931"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# See: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
# For info on compatibility of black with isort, pylint, flake8
[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
